[workspace]
resolver = "3"
members = ["code/wasm-builder", "code/beginner/*", "run-wasm"]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies.image]
version = "0.25.5"
default-features = false

[workspace.dependencies]
app-surface = "1.5.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
glam = "0.30.0"
env_logger = "0.11.6"
flume = "0.11.1"
instant = "0.1.13"
log = "0.4.26"
parking_lot = "0.12.3"
pollster = "0.4.0"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wgpu = "24.0.1"
winit = "0.30.9"

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
fern = "0.7.1"
reqwest = "0.12.12"
web-sys = { version = "0.3.77", default-features = false }
wasm-bindgen = "0.2.100"
js-sys = { version = "0.3.77", default-features = false }
wasm-bindgen-futures = "0.4.50"

# build-dependencies
anyhow = "1.0.96"
fs_extra = "1.3.0"
glob = "0.3.2"
cargo-run-wasm = "0.4.0"
wasm-bindgen-cli-support = "0.2.100"

[profile.release]
strip = true

[profile.wasm-release]
inherits = "release"
lto = "fat"
opt-level = 2
panic = "abort"
codegen-units = 1
