[package]
name = "utils"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
app-surface.workspace = true
bytemuck.workspace = true
cfg-if.workspace = true
env_logger.workspace = true
log.workspace = true
parking_lot = { workspace = true }
winit.workspace = true
wgpu.workspace = true
glam.workspace = true
image = { workspace = true, features = ["png", "jpeg"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true
instant = { workspace = true, features = ["now"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.13", features = ["now", "wasm-bindgen"] }
console_error_panic_hook.workspace = true
console_log.workspace = true
fern.workspace = true
reqwest = "0.12.12"
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "Document",
  "Window",
  "Location",
  "Element",
  "HtmlCanvasElement",
] }
