[package]
name = "wgpu-in-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
# crate-type = ["cdylib"]
crate-type = ["cdylib", "rlib"]

[features]
default = []
web_rwh = ["app-surface/web_rwh"]

[dependencies]
app-surface = { workspace = true, features = [
  # "web_rwh",
] }
bytemuck.workspace = true
cfg-if.workspace = true
env_logger.workspace = true
flume.workspace = true
glam.workspace = true
log.workspace = true
rand = "0.9.0"
# https://github.com/rust-random/rand/blob/585b29f2a9b21170c56fc9a0e29cff664491561c/README.md?plain=1#L113
getrandom = { version = "0.3.1", features = ["js"] }
utils.workspace = true
wgpu.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
winit.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log.workspace = true
js-sys.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
  "Document",
  "Window",
  "Element",
  "HtmlCanvasElement",
] }
